--- a/overview/architecture-concepts/system-architecture-diagram.mdx
+++ b/overview/architecture-concepts/system-architecture-diagram.mdx
@@ -1,160 +1,118 @@
 ---
-title: "System Architecture At-a-Glance"
-description: "Visualize how the major components of GoogleTest and GoogleMock interact—from test-case definitions, assertions, and mock objects to result reporting and integration hooks. Gain a bird’s-eye view of data flow and extension points using a mermaid diagram, making system navigation intuitive."
+title: "System Architecture Overview"
+description: "Visualize GoogleTest’s modular design using a mermaid architecture diagram. Trace how test code interacts with assertion engines, mocking utilities, discovery systems, and reporting layers, and see the connections between GoogleTest and GoogleMock components."
 ---
 
-# System Architecture At-a-Glance
+# System Architecture Overview
 
-## Overview
+Explore GoogleTest’s modular system design with a clear, benefit-driven architecture diagram. This page provides a visual map of how the core components of GoogleTest interact, including test execution, assertion handling, mocking capabilities, discovery, and reporting.
 
-This page offers a concise, visual representation of GoogleTest and GoogleMock's core components and their interactions. It guides you through the lifecycle of tests—from definition and assertion evaluation to mock object behavior and results reporting—providing an intuitive, high-level understanding of how each piece fits together within the framework.
+## Understanding GoogleTest’s Architecture
 
-Understanding this bird's-eye view simplifies navigation within the documentation and accelerates mastering the workflows that make GoogleTest a powerful C++ testing solution.
+GoogleTest is built as a collection of modular components that seamlessly collaborate to support comprehensive and efficient C++ testing. This architecture ensures flexibility, ease of extension, and clarity about the roles each component plays in the testing lifecycle.
 
----
+At its core, GoogleTest runs your test code, verifies assertions, mocks dependencies when needed, discovers tests dynamically, and presents the results clearly for quick diagnosis. This layered design means you can focus on writing tests, while GoogleTest handles execution details.
 
-## Core Architecture Explained
+### Why This Matters to You
 
-GoogleTest's architecture revolves around clearly defined modules that collaborate seamlessly to enable expressive, reliable testing. GoogleMock extends this by adding sophisticated mocking capabilities.
+- **Clear Interaction Flow:** Understand how your test code triggers assertions, how mock objects operate, and how the system gathers and reports results.
+- **Easier Debugging:** By visualizing dependencies and component boundaries, you can identify where failures or slowdowns originate.
+- **Smooth Integration:** Knowing module responsibilities helps you integrate GoogleTest with other tools or extend its capabilities thoughtfully.
 
-At its heart, the system processes **Test Cases** written by you, evaluates **Assertions** to verify expectations, handles **Mock Objects** to simulate dependencies, and finally produces comprehensive **Test Results**.
+## Components of GoogleTest
 
-### High-Level Workflow
+### 1. Test Code
+Your test code contains the logic that exercises your application. It calls into GoogleTest’s assertion engine to verify expected outcomes.
 
-1. **Test Case Definitions**: You define individual tests (using `TEST()` or `TEST_F()`) that specify the conditions your code should satisfy.
-2. **Assertion Checks**: GoogleTest evaluates assertions (`EXPECT_*`, `ASSERT_*`) inside tests to detect success or failure conditions.
-3. **Mock Object Interactions**: Using GoogleMock, you define mock classes and specify expected interactions, controlling behavior and verifying call patterns.
-4. **Test Execution Control**: The framework manages test lifecycle, running tests one at a time for isolation, handling setup and teardown.
-5. **Result Reporting**: Outcomes from tests, assertions, and mock verifications are aggregated and presented in console output or XML logs.
+### 2. Assertion Engine
+This subsystem evaluates expressions in your tests and reports successes or failures. It underpins all verification and provides user-friendly diagnostics.
 
----
+### 3. Mocking Utilities (GoogleMock Integration)
+GoogleMock (gMock) extends GoogleTest’s ability to simulate parts of your system. It lets you create mock classes, define method call expectations, and control behavior for isolated testing.
 
-## Component Interaction Diagram
+### 4. Test Discovery
+The discovery system scans for all available tests at runtime. It automates test execution by listing and organizing tests without manual registration.
+
+### 5. Reporting Layers
+After tests run, GoogleTest collates results, formats summaries, and provides detailed output. This includes integration with IDEs, CI pipelines, and specialized reporters.
+
+## GoogleTest and GoogleMock Synergy
+
+GoogleMock is fully integrated into GoogleTest, enhancing testability by mocking interfaces and verifying interactions. The architecture highlights the complementary role of GoogleMock components alongside GoogleTest’s core test execution and reporting.
+
+## Visual Architecture Diagram
 
 ```mermaid
 flowchart TD
 
-  subgraph Test_Definition
-    TestCase[Test Case Definitions]
-    Assertions[Assertions in Tests]
+  subgraph Test Execution
+    TestCode["Test Code"] -->|Calls| AssertionEngine["Assertion Engine"]
+    AssertionEngine --> Reporting["Reporting & Diagnostics"]
   end
 
-  subgraph Mocking
-    MockClasses[Mock Classes Defined]
-    MockExpectations[Expectations & Actions Set]
-    MockCalls[Mock Method Invocations]
+  subgraph Mocking Module
+    TestCode -->|Uses Mocks| MockingUtils["Mocking Utilities (gMock)"]
+    MockingUtils --> AssertionEngine
   end
 
-  subgraph Execution_Control
-    TestRunner[RUN_ALL_TESTS() Invocation]
-    TestLifecycle[Setup, Run, Teardown]
-    AssertionEval[Evaluate Assertions]
-    MockVerification[Verify Mock Expectations]
+  subgraph Discovery Layer
+    Runner["Test Runner"] --> Discovery["Test Discovery System"]
+    Discovery --> TestCode
   end
 
-  subgraph Result_Reporting
-    OutputFormatter[Format Test Output]
-    ConsoleOutput[Console / Stdout Logs]
-    XMLGenerator[Generate XML Reports]
+  subgraph Reporting Layer
+    Reporting --> IDEIntegration["IDE/CI Integration"]
+    Reporting --> DetailedReports["Detailed Test Reports"]
   end
 
-  %% Relationships
+  Runner --> TestCode
 
-  TestRunner --> TestLifecycle
-  TestLifecycle --> TestCase
-  TestCase --> Assertions
+  %% Linking GoogleTest and GoogleMock explicitly
+  AssertionEngine -.-> MockingUtils
 
-  MockClasses --> MockExpectations
-  MockExpectations --> MockCalls
-  MockCalls --> MockVerification
-
-  TestLifecycle --> AssertionEval
-  TestLifecycle --> MockVerification
-
-  AssertionEval --> OutputFormatter
-  MockVerification --> OutputFormatter
-
-  OutputFormatter --> ConsoleOutput
-  OutputFormatter --> XMLGenerator
-
-  %% Styling
-  classDef testDef fill:#f9f,stroke:#333,stroke-width:1px;
-  classDef mock fill:#ffefc1,stroke:#996600,stroke-width:1px;
-  classDef exec fill:#c1e1ff,stroke:#004080,stroke-width:1px;
-  classDef report fill:#d2ffd2,stroke:#009900,stroke-width:1px;
-
-  class TestCase,Assertions testDef;
-  class MockClasses,MockExpectations,MockCalls mock;
-  class TestRunner,TestLifecycle,AssertionEval,MockVerification exec;
-  class OutputFormatter,ConsoleOutput,XMLGenerator report;
+  %% Style
+  classDef component fill:#f9f9f9,stroke:#333,stroke-width:2px,rounded
+  class TestCode,AssertionEngine,MockingUtils,Discovery,Reporting,Runner,Reporting,IDEIntegration,DetailedReports component
 ```
 
----
+This diagram illustrates the key modules you interact with when using GoogleTest and GoogleMock.
 
-## In Detail: Key Components
+## Real-World Scenario
 
-### Test Case Definitions
-Create tests using macros such as `TEST()` or `TEST_F()`, where each test exercises a distinct unit of your code. This organization ensures tests are independent and focused.
+Imagine you are testing a function that calls a remote service. Your test code uses GoogleMock to provide a mock implementation of the service interface. When your test runs:
 
-### Assertions
-Statements like `EXPECT_EQ()` and `ASSERT_TRUE()` check conditions during test execution. These determine if the behavior conforms to expectations, allowing either continued testing on failure (`EXPECT_*`) or aborting the test (`ASSERT_*`).
+1. Your test code calls the mocked interface (through Mocking Utilities).
+2. GoogleMock verifies the expected calls and parameters.
+3. Assertions validate results.
+4. The assertion engine triggers a report on any failure.
+5. The reporting system formats and outputs the status.
 
-### Mock Classes and Expectations
-GoogleMock provides macros like `MOCK_METHOD()` to define mock implementations, and `EXPECT_CALL()` to specify expected interactions. This enables you to isolate the unit under test by simulating its dependencies.
+This flow highlights the modular collaboration enabling robust tests.
 
-### Test Execution
-`RUN_ALL_TESTS()` orchestrates the testing process, creating fresh test fixtures for each test, running setup and teardown routines, and ensuring tests are run sequentially for reproducibility.
+## Practical Tips
 
-### Result Reporting
-Test outcomes, including successes, failures, and mock verification results, are formatted into human-readable console output and optional machine-readable XML, facilitating automation and CI integration.
+- When extending GoogleTest, ensure new components define clear interfaces and fit cleanly into this architecture.
+- Use GoogleMock for dependency injection and precise interaction testing.
+- Leverage GoogleTest's discovery features to keep your test suites manageable.
+- Utilize reporting outputs for automation and continuous integration feedback.
 
----
+## Troubleshooting Common Architecture Issues
 
-## Real-World Scenario: How a Test Runs
-
-Imagine you have a sample test verifying a class's behavior:
-
-- You write a `TEST_F(MyClassTest, DoesXyz)` facilitating multiple related tests with shared setup.
-- Inside the test, you use assertions to check outputs.
-- You define mock objects for any dependencies and specify that a method is expected to be called with certain parameters.
-- Running `RUN_ALL_TESTS()` triggers this test:
-  - A fresh fixture is created.
-  - The test runs, assertions are evaluated, and mock expectations are verified.
-  - The test passes or fails based on these checks.
-- The results get printed to the screen with detailed failure messages if any, aiding in swift debugging.
-
----
-
-## Best Practices
-
-- **Isolate Tests**: Each test runs independently with fresh objects to prevent interference.
-- **Define Clear Expectations with Mocks**: Use GoogleMock to precisely specify interactions, avoiding overly broad or rigid expectations.
-- **Use Assertions Judiciously**: Use `EXPECT_*` for continued checks, `ASSERT_*` when failure invalidates following steps.
-- **Organize Tests Logically**: Group related tests into fixtures to reuse setup.
-
----
-
-## Troubleshooting Common Issues
-
-<AccordionGroup title="Common Architecture Questions">
-<Accordion title="Why does each test get a fresh fixture instance?">
-This isolation ensures that changes in one test do not affect another, preventing flaky tests and difficult debugging sessions.
-</Accordion>
-<Accordion title="How are mock expectations enforced?">
-Mock expectations set by `EXPECT_CALL()` are verified automatically when the mock object is destructed, raising errors if not met.
-</Accordion>
-<Accordion title="What happens if an assertion fails?">
-For `ASSERT_*`, the current test is aborted immediately. For `EXPECT_*`, the test continues to run and report multiple failures if any.
-</Accordion>
-</AccordionGroup>
-
----
+- **Test Not Discovered:** Check that your test code is properly registered with the test discovery system.
+- **Mock Method Not Called:** Verify mock expectations and check if the mock is correctly injected.
+- **Unclear Failure Reports:** Use detailed reporting modes and enable verbose logging in GoogleTest.
 
 ## Next Steps
 
-Start by exploring [What is GoogleTest?](../product-intro-core-value/what-is-googletest) to deepen your understanding of the framework's goals and architecture. Then, dive into the [Quick Feature Overview](../product-intro-core-value/feature-quick-tour) for a hands-on glimpse of key features. When ready, visit the [Writing Your First Test](../../getting-started/first-test-experience/writing-your-first-test) page to experience the test-writing flow firsthand.
+To get hands-on with this architecture:
 
+- Visit [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) to master mocking basics.
+- Explore [Mock Object Definition](https://google.github.io/googletest/api/gmock_reference.html#mock-object-definition) to create your own mocks.
+- Review [Setting Expectations and Behavior](https://google.github.io/googletest/api/gmock_reference.html#setting-expectations-and-behavior) for controlling mocks.
+- Understand [Strictness Modes](https://google.github.io/googletest/api/gmock_reference.html#strictness-modes) to manage mock call warnings and failures.
 
 ---
 
-*This overview serves as a foundational map. For intricate details on test fixtures, mock expectations, and assertion types, refer to their respective focused guides and API reference documentation.*
+For broader context, please refer to the full [GoogleTest Overview](https://google.github.io/googletest/) and relevant guides on mocking, assertions, and test organization in this documentation set.
+
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googlemock/test/gmock-spec-builders_test.cc", "range": "1-725"},{"path": "docs/gmock_for_dummies.md", "range": "1-365"},{"path": "docs/gmock_cheat_sheet.md", "range": "1-432"},{"path": "docs/reference/mocking.md", "range": "1-563"}]} />
