--- a/overview/feature-landscape/feature-overview.mdx
+++ b/overview/feature-landscape/feature-overview.mdx
@@ -1,135 +1,176 @@
 ---
-title: "Core Feature Overview"
-description: "Survey the primary features of GoogleTest: test discovery, assertion varieties, parameterized and typed tests, death test support, user-defined assertions, and flexible test execution modes."
+title: "Feature Overview"
+description: "Quickly scan the main features offered by GoogleTest, from assertion types to parameterized and type-parameterized tests, as well as integration points like mocking and value-parameterization."
 ---
 
-# Core Feature Overview
+# Feature Overview
 
-GoogleTest offers a comprehensive suite of powerful features that streamline writing, organizing, and executing C++ tests with clarity and precision. This page presents a survey of the primary capabilities users rely on to achieve reliable, maintainable, and scalable test suites.
+Explore the essential capabilities of GoogleTest that empower you to write robust, flexible, and expressive tests in C++. This overview highlights the diverse types of assertions, powerful parameterization techniques for tests, and key integration points including mocking utilities.
 
 ---
 
-## Test Discovery and Organization
+## Understanding the Landscape of GoogleTest Features
 
-GoogleTest automatically discovers and organizes your tests, requiring minimal boilerplate. Simply define your tests using the provided macros, and GoogleTest handles collecting and running them.
+GoogleTest provides a comprehensive set of tools designed to address the varied needs of C++ testing. Whether you need fine-grained assertions, want to run multiple inputs through your tests, or create complex mock behaviors, this feature set has you covered.
 
-- **Test Cases and Test Suites:** Group related tests with test cases (or test suites), enabling structured test organization.
-- **Parameterized Tests:** Define tests once and run them against multiple input parameters, avoiding code duplication.
-- **Typed Tests:** Write generic tests applicable to multiple types, facilitating type-based validation.
+### Core Feature Highlights
 
-**Example:**
+- **Rich Assertion Types:** Includes equality, inequality, floating-point comparisons, exception assertions, and death tests, giving you fine control to validate your code's behavior.
+
+- **Parameterized Tests:** Write generic tests that run with different input values or types, avoiding code duplication and improving test coverage.
+
+- **Type-Parameterized Tests:** Extend parameterization to test template classes or functions across multiple types with ease.
+
+- **Integration with GoogleMock:** Seamlessly mock interfaces with powerful matchers, actions, expectations, and strictness modes to verify interactions.
+
+- **Value-Parameterized Tests:** Combine GoogleTest's parameterized tests with typed inputs to test functions with various complex scenarios.
+
+---
+
+## Deep Dive: Assertion Types
+
+Assertions form the backbone of your test validations. GoogleTest offers a variety of assertion macros and functions to confirm your code behaves as expected.
+
+- **Basic Assertions:** `EXPECT_EQ`, `ASSERT_NE`, `EXPECT_TRUE`, `ASSERT_FALSE`, etc., for checking equality, inequality, and boolean conditions.
+
+- **Floating Point Assertions:** `EXPECT_FLOAT_EQ`, `ASSERT_DOUBLE_EQ` tailored for floating-point comparisons to handle rounding errors.
+
+- **Exception Assertions:** `EXPECT_THROW`, `ASSERT_THROW`, `EXPECT_NO_THROW` to ensure exceptions are thrown or not thrown.
+
+- **Death Tests:** Confirm that code causes program termination under certain conditions.
+
+For detailed usage and examples, see the [Assertions Reference](https://google.github.io/googletest/reference/assertions.html).
+
+---
+
+## Parameterized and Type-Parameterized Tests
+
+GoogleTest's parameterization framework allows you to write tests that operate over a set of inputs or types, dramatically reducing redundant code.
+
+### Value-Parameterized Tests
+
+These tests accept a set of values as parameters and run the same test logic against each. For example:
+
 ```cpp
-TEST(MyMathTest, BasicAssertions) {
-  EXPECT_EQ(4, Add(2, 2));
-  EXPECT_NE(5, Multiply(2, 2));
+class MyTest : public ::testing::TestWithParam<int> {};
+
+TEST_P(MyTest, HandlesValues) {
+  int val = GetParam();
+  EXPECT_GT(val, 0);
 }
 
-class FizzBuzzTest : public ::testing::TestWithParam<int> {};
-
-TEST_P(FizzBuzzTest, HandlesMultiples) {
-  int n = GetParam();
-  EXPECT_TRUE(IsMultipleOfThreeOrFive(n));
-}
-
-INSTANTIATE_TEST_SUITE_P(Tests, FizzBuzzTest, ::testing::Values(3, 5, 15));
+INSTANTIATE_TEST_SUITE_P(
+  PositiveNumbers, MyTest,
+  ::testing::Values(1, 2, 3, 4));
 ```
 
+*Benefits:*
+- Write once, test with many inputs
+- Easy to maintain and extend
 
-## Assertion Varieties
 
-GoogleTest provides a rich set of assertions that enable precise and expressive verification of expected behavior.
+### Type-Parameterized Tests
 
-- **Standard Assertions:** `EXPECT_EQ`, `ASSERT_TRUE`, `EXPECT_NE`, and more, for common comparisons and conditions.
-- **User-Defined Assertions:** Create custom assertion macros or functions to deliver meaningful diagnostics tailored to your domain.
-- **Death Tests:** Verify your code’s behavior when it terminates due to fatal errors or assertions.
+These tests help validate template code by running the test suite across various types.
 
-**Example:**
 ```cpp
-ASSERT_TRUE(IsPrime(7));  // Fails test immediately if false
-EXPECT_EQ(10, Factorial(5)); // Records failure but continues
+template <typename T> class TypedTest : public ::testing::Test { };
+using MyTypes = ::testing::Types<int, float, double>;
+TYPED_TEST_SUITE(TypedTest, MyTypes);
+
+TYPED_TEST(TypedTest, WorksForAllTypes) {
+  TypeParam value = 0;
+  EXPECT_EQ(value, 0);
+}
 ```
 
+*Benefits:*
+- Validate templates over multiple data types
+- Ensure type safety and consistent logic
 
-## Test Execution Modes
+---
 
-GoogleTest empowers you with flexible control over how tests run and report results.
+## Integration Points: Mocking and Advanced Features
 
-- **Test Filters:** Run a subset of tests via command line filtering.
-- **Repeated Runs:** Execute tests multiple times to catch flaky behavior.
-- **Shuffling:** Randomize test order to expose hidden dependencies.
-- **Death Test Environment:** Supports running tests that are expected to cause process termination.
+GoogleTest tightly integrates with GoogleMock, providing a powerful and expressive mocking framework.
 
-**Example:**
+### Mocking Framework Highlights
+
+- **Flexible Mock Class Definition:** Use `MOCK_METHOD` to easily generate mock methods.
+- **Set Expectations:** `EXPECT_CALL` specifies which calls are expected, argument matchers, number of calls, and result behaviors.
+- **On-Call Defaults:** You can set default behavior on mocks with `ON_CALL` for uninteresting calls.
+- **Strictness Modes:** Easily toggle between nice (silent on uninteresting calls), naggy (warn on uninteresting calls), or strict (fail on uninteresting calls) mocks using `NiceMock`, `NaggyMock`, and `StrictMock`.
+- **Sequences and Partial Orders:** Control call order with `InSequence` or `After` clauses for complex interaction testing.
+
+### Feature Integration Example
+
+```cpp
+class MockFoo {
+ public:
+  MOCK_METHOD(int, Bar, (int), ());
+};
+
+TEST(MockFooTest, HandlesCalls) {
+  MockFoo mock;
+
+  ON_CALL(mock, Bar).WillByDefault(Return(42));
+  EXPECT_CALL(mock, Bar(5)).Times(1);
+
+  EXPECT_EQ(mock.Bar(5), 42);
+}
 ```
---gtest_filter=MyTestSuite.*
---gtest_repeat=10
---gtest_shuffle
-```
 
-
-## Failure Reporting and Debugging
-
-GoogleTest offers detailed failure reports that aid in quickly diagnosing issues.
-
-- **Descriptive Messages:** Show expected vs actual values with contextual information.
-- **Stack Traces:** Display call stacks on failures where supported.
-- **Test Logs:** Optionally capture additional logs during test runs.
-
-
-## Flexible Test Fixtures
-
-To support setup and teardown semantics, GoogleTest provides test fixtures that allow you to share common test configuration.
-
-- Use fixtures to initialize resources or pre-populate data used across multiple tests.
-- Supports both simple and parameterized fixtures.
-
-
-## Real-World Context
-
-Picture a developer maintaining a large codebase who wants to avoid regressions when refactoring. Using parameterized tests, they write a single test that validates their core algorithm with diverse inputs. When bugs emerge, rich assertions and clear failure messages pinpoint the root cause rapidly. With death tests, they ensure error conditions abort gracefully. Tests run automatically in continuous integration environments, leveraging GoogleTest’s filtering and repetition options to ensure robustness.
-
-
-## Practical Tips & Best Practices
-
-- Use `EXPECT_` assertions when you want tests to continue after failure; use `ASSERT_` when failure should halt the test immediately.
-- Keep parameterized tests focused and concise to maximize reuse.
-- Utilize test filters liberally during development to speed up feedback loops.
-- Use death tests judiciously for error-handling scenarios that exit the program.
-- Combine assertions with informative messages to clarify intent.
-
-
-## Troubleshooting Common Issues
-
-- **Tests Not Running:** Make sure `TEST` or `TEST_F` macros are used correctly; verify that your test functions are in the same binary and linked correctly.
-- **Assertions Not Firing:** Ensure assertions are inside test bodies and not global scope.
-- **Death Tests Failing Silently:** Check platform support and ensure `EXPECT_DEATH` macros are used properly.
-
+For full details on mocking capabilities and syntax, explore the [Mocking Reference](https://google.github.io/googletest/reference/mocking.html).
 
 ---
 
-## Getting Started Preview
+## Why This Matters for You
 
-To start using these core features:
+By mastering these features, you gain:
 
-1. Write your first test using the `TEST` macro.
-2. Run your tests and observe output.
-3. Gradually introduce fixtures and parameterized tests for more complex scenarios.
+- **Enhanced Test Expressiveness:** Write tests that align closer with your intent.
+- **Increased Test Coverage:** Thoroughly validate your code against varied inputs and types.
+- **Robust Interaction Testing:** Precisely verify collaboration between components.
+- **Improved Maintenance:** Parameterized and typed tests reduce duplication and make tests easier to update.
 
-For detailed instructions and examples, see the [Writing Your First Test](https://your_docs_base_url/guides/getting-started-with-googletest/writing-your-first-test) guide.
-
----
-
-<Callout>
-**Note:** This page offers a high-level survey. For deeper dives, explore sections on [Assertions](../api-reference/core-testing-apis/assertions.md), [Parameterized Tests](../guides/advanced-testing-and-best-practices/test-fixtures-parameterized.md), and [Death Tests](../guides/advanced-testing-and-best-practices/maintainable-tests.md).
-</Callout>
+Imagine testing a function that calculates discounts for different types of users and purchase amounts. Using parameterized and type-parameterized tests makes specifying wide input coverage effortless, increasing confidence with minimal overhead. Coupled with mocking, you can simulate external service calls without complex setup.
 
 ---
 
-### See Also
-- [What is GoogleTest?](../overview/intro-product-essentials/what-is-googletest.md)
-- [Value Proposition and Key Benefits](../overview/intro-product-essentials/value-proposition-and-benefits.md)
-- [Core Concepts & Terminology](../overview/architecture-and-core-concepts/core-concepts-and-terminology.md)
+## Practical Tips and Best Practices
+
+- Use `EXPECT_CALL` for interactions you explicitly want to verify and `ON_CALL` to define default behavior without strict expectations.
+
+- Leverage sequences (`InSequence`) for strict ordering tests but prefer partial ordering (`After`) for flexible interaction graphs.
+
+- When writing parameterized tests, name your test cases clearly to reflect different parameter groups.
+
+- Use `NiceMock` objects when uninteresting calls are common to suppress noisy warnings.
+
+- Always clean up mock objects properly to trigger verification and avoid false positives.
 
 ---
 
-<Source url="https://github.com/google/googletest" paths={[{"path": "overview/feature-landscape/feature-overview.mdx", "range": "1-120"}]} />
+## Next Steps
+
+- Start writing your first test to see assertions and mock integration in action by visiting [Creating Your First Test](../getting-started/first-test-workflow/creating-your-first-test).
+
+- Deepen your understanding of matchers and actions in the [Matchers Reference](../reference/matchers.md) and [Actions Reference](../reference/actions.md).
+
+- Explore advanced mocking patterns and partial ordering techniques in the [gMock Cookbook](../gmock_cook_book.md).
+
+- Review the [Key Features and Value Proposition](../overview/introduction-core-value/core-benefits) page for a broader perspective of GoogleTest capabilities.
+
+---
+
+## Related Resources
+
+- [GoogleTest: What is GoogleTest?](../overview/introduction-core-value/what-is-googletest)
+- [Fundamental Concepts & Terminology](../overview/architecture-concepts/core-concepts-terminology)
+- [Mocking Reference](../reference/mocking.md)
+- [gMock Cheat Sheet](../docs/gmock_cheat_sheet.md)
+- [gMock FAQ](../docs/gmock_faq.md)
+
+---
+
+GoogleTest continues to evolve, embracing modern C++ practices and providing the most effective toolkit for C++ testing and mocking. This Feature Overview page serves as your gateway to the rich ecosystem of GoogleTest capabilities.
